--- a/opentasks/src/main/res/values-it/strings.xml
+++ b/opentasks/src/main/res/values-it/strings.xml
@@ -115,7 +115,7 @@
     <string name="task_list_widget_title">Attività correnti</string>
     <string name="task_list_widget_title_4x4">Attività correnti 4x4</string>
 
-    <!-- Sharing intent -->
+    <!-- Incoming share -->
     <string name="share_as_task">Aggiungi attività</string>
 
 </resources>
