--- a/opentasks/src/main/res/values/strings.xml
+++ b/opentasks/src/main/res/values/strings.xml
@@ -250,4 +250,10 @@
     <!-- Sharing intent -->
     <string name="share_as_task">Create Task</string>
 
+    <!-- GET_ACCOUNTS permission (in CONTACTS permission group) requesting dialog: -->
+    <string name="opentasks_permission_request_dialog_getaccounts_title">Permission needed</string>
+    <string name="opentasks_permission_request_dialog_getaccounts_message">In order to synchronize tasks for accounts, OpenTasks needs to access the account list which is in the Contacts permission group.</string>
+    <string name="opentasks_permission_request_dialog_getaccounts_button_negative">I don\'t use sync, don\'t show it again</string>
+    <string name="opentasks_permission_request_dialog_getaccounts_button_positive">Continue to grant the permission</string>
+
 </resources>
